stylesheets/main.css
@charset "utf-8";

/*MAIN.CSS*/

/*--------------------------------------------------------*/


/* TABLE OF CONTENTS: */


/*--------------------------------------------------------*/


/* 01 - LAYOUT INITIALIZATION & COLOR PRESETS */


/* 02 - HEADER, INTRO & NAVIGATION */


/* 03 - COMMON ELEMENTS & TYPOGRAPHY */


/* 04 - PAGES & SECTIONS SETUP*/


/* 05 - FOOTER*/


/*-------------------------------------------------------------------------------------------------------------------------------*/


/* 01 - LAYOUT INITIALIZATION & COLOR PRESETS */


/*-------------------------------------------------------------------------------------------------------------------------------*/

html {}
body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  overflow-x: hidden;
}
a, a:hover, a:focus {
  text-decoration: none;
}
a:focus {
  outline: none;
}
.ease {
  -webkit-transition: all .4s ease-in-out;
  -moz-transition: all .4s ease-in-out;
  -ms-transition: all .4s ease-in-out;
  -o-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}
.ease:hover {
  -webkit-transition: all .4s ease-in-out;
  -moz-transition: all .4s ease-in-out;
  -ms-transition: all .4s ease-in-out;
  -o-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}
.text-center > .img-responsive {
  display: block;
  display: inline-block;
}
p {
  color: #bababa;
  font-family: 'Raleway', sans-serif;
  font-size: 20px;
  font-weight: 300;
  line-height: 25px;
}
h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: normal;
}
#content {
  width: 100%;
  overflow: hidden
}
.container {
  width: 100%;
  margin-right: 0;
  padding-left: 0;
  padding-right: 0;
}
.no-parallax {
  background-attachment: scroll !important;
}
.mast-wrap {
  opacity: 1;
}

/*-------------------------------------------------------------------------------------------------------------------------------*/


/* 02 - HEADER & NAVIGATION */


/*-------------------------------------------------------------------------------------------------------------------------------*/

.main-nav {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 100;
  -moz-box-shadow: 10px 1px 4px #000000;
  -webkit-box-shadow: 10px 1px 4px #000000;
  box-shadow: 10px 1px 4px #000000;
}
.nav-bg {
  height: 100%;
  background: url('http://placehold.it/1500x1000.jpg') no-repeat center center;
  background-size: cover;
}
.main-nav-menu {
  list-style: none;
  padding: 0;
  text-align: center;
  width: 70%;
  margin-left: auto;
  margin-right: auto;
}
.main-nav-menu li {
  padding: 0;
}
.main-nav-menu li a.main-nav-link {
  font-family: "Raleway", Arial, Helvetica, sans-serif;
  font-weight: 200;
  font-size: 16px;
  line-height: 16px;
  letter-spacing: 8px;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: all .8s linear;
  -moz-transition: all .8s linear;
  -ms-transition: all .8s linear;
  -o-transition: all .8s linear;
  transition: all .8s linear;
}
.main-nav-menu li a.main-nav-link:hover {
  -webkit-transition: all .8s linear;
  -moz-transition: all .8s linear;
  -ms-transition: all .8s linear;
  -o-transition: all .8s linear;
  transition: all .8s linear;
}
.sub-nav {
  display: none;
  padding: 20px 0 15px 0;
}
.sub-nav a {
  font-family: "Raleway", Arial, Helvetica, sans-serif;
  font-weight: 200;
  font-size: 12px;
  line-height: 20px;
  letter-spacing: 4px;
  text-decoration: none;
  text-transform: uppercase;
}
.sub-nav a:after {
  content: ' / ';
  margin-left: 3px;
  margin-right: 3px;
}
.sub-nav a:last-child:after {
  display: none;
}
.social-wrap {
  list-style: none;
  padding: 0;
  margin-top: 70px;
}
.social-wrap li {
  display: inline-block;
  margin: 0 2px;
}
.social-wrap li a > img {
  width: 24px;
  opacity: 0.2;
  -webkit-transition: all .4s ease-in-out;
  -moz-transition: all .4s ease-in-out;
  -ms-transition: all .4s ease-in-out;
  -o-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}
.social-wrap li a:hover > img {
  opacity: 1;
  -webkit-transition: all .4s ease-in-out;
  -moz-transition: all .4s ease-in-out;
  -ms-transition: all .4s ease-in-out;
  -o-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}
.credits {
  margin-top: 10px;
  font-size: 12px;
  line-height: 19px;
}
.info-button {
  position: fixed;
  bottom: 0px;
  right: 10px;
}
.info-button > a {
  opacity: 0.3;
  -webkit-transition: all .4s ease-in-out;
  -moz-transition: all .4s ease-in-out;
  -ms-transition: all .4s ease-in-out;
  -o-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}
.info-button > a:hover {
  opacity: 1;
  -webkit-transition: all .4s ease-in-out;
  -moz-transition: all .4s ease-in-out;
  -ms-transition: all .4s ease-in-out;
  -o-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}

/*Common Spacing and Padding*/

.page-section {}
.separator-section {
  padding: 100px 0;
}
.add-top {
  margin-top: 120px;
}
.add-bottom {
  margin-bottom: 120px;
}
.add-top-half {
  margin-top: 60px;
}
.add-bottom-half {
  margin-bottom: 60px;
}
.add-top-quarter {
  margin-top: 30px;
}
.pad-top {
  padding-top: 100px;
}
.pad-bottom {
  padding-bottom: 100px;
}
.pad-top-half {
  padding-top: 60px;
}
.pad-bottom-half {
  padding-bottom: 60px;
}
.pad {
  padding-left: 20px;
  padding-right: 20px;
}
.pad-common {
  padding: 100px;
}
.remove-top {
  margin-top: 0 !important;
}
.remove-bottom {
  margin-bottom: 0;
}
.remove-bottom {
  margin-bottom: 0;
}
.remove-pad-top {
  padding-top: 0;
}
.remove-pad-bottom {
  padding-bottom: 0;
}
.mob-center > .img-responsive {
  display: inline-block;
}
.no-gutter {
  padding: 0px !important;
}
.valign {
  position: relative;
  top: 40%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}
.absolute-overlay {
  position: absolute;
  top: 0;
  left: 0;
}
.sticky-foot {
  max-height: 62px;
}
/* ... */

